style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;1,200&display=swap");

body {
  background: #0d1a2d;
  color: white;
  margin: 0;
  padding: 0;
  font-family: "Poppins";
}

body::-webkit-scrollbar {
  width: 5px;
  background: #09111e;
}

body::-webkit-scrollbar-thumb {
  background: #b6e0f8;
  border-radius: 100px;
}

body::-webkit-scrollbar-thumb:hover {
  background: #9cd6f8;
}

::selection {
  color: #4a58e9;
  background: grey;
}

section {
  height: 100vh;
}

.intro-text {
  position: absolute;
  top: 35%;
  left: 15%;
}

.intro-text h3 {
  color: lightgray;
  transition: visibility 0s, opacity 0.3s linear;
}

#typed {
  font-size: 4em;
}

.typed-cursor {
  display: none;
}

.hidden {
  opacity: 0;
}

#about {
  background: linear-gradient(180deg, #1e2d44 0%, #203149 100%);
  display: flex;
  flex-direction: row;
}

.section-title {
  font-size: 3em;
  width: max-content;
  border-bottom: 5px solid #3bffd7;
}

#about-text {
  padding: 50px;
  width: 50%;
  position: relative;
}

#heyguesswhatitschan {
  object-fit: cover;
  height: 75vh;
  margin: auto;
}

/* Projects */

.projects {
  gap: 1em;
  display: flex;
  flex-direction: column;
}

.project-item {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2em;
  padding: 0.5em;
  text-decoration: none;
}

.project-item:hover {
  background-color: #152846;
  border-radius: 0.5em;
}

.project-item a {
  text-decoration: none;
  color: white;
}

.project-item p {
  font-weight: 400;
}

.project-img {
  border-radius: 0.5em;
}

.project-img:hover {
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.project-title {
  text-decoration: none;
  font-weight: 900;
}

.project-title:hover {
  text-decoration: underline;
}

.rails {
  color: #CD0001;
}

.ux {
  color: #F2BC47;
}

.react {
  color: #14D3F9;
}

/* For smaller screens */
@media (max-width: 768px) {
  .project-item {
    background-color: #152846;
    flex-direction: column;
    text-align: center;
    gap: 0;
    border-radius: 0.5em;
  }

  .secondary-text {
    display: none;
  }

  #about {
    display: flex;
    flex-direction: column;
  }

  #about-text {
    padding: 50px 50px 0 50px;
    width: 50%;
    /* position: relative; */
  }
  
  #heyguesswhatitschan {
    object-fit: cover;
    height: 45vh;
    margin: auto;
  }

}

.career-content {
  padding: 40px 70px;
}

.company {
  display: flex;
  align-items: center;
  flex-direction: row;
  margin: 60px 0;
  padding: 12px;
  border-radius: 25px;
}

.company:hover {
  background-color: #1e2d44;
  box-shadow: 5px 10px 18px #111111;
  transition: 0.5s;
}

.company img {
  margin-right: 40px;
  margin-left: 10px;
  border-radius: 5px;
  height: 10%;
}

.company img:hover {
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

/* Contact */

#contact {
  background-color: #1e2d44;
  position: relative;
}

.contact-info {
  padding: 50px;
  width: 60%;
  z-index: 2;
}

.contact-info p {
  line-height: 30px;
}

.contact-links {
  display: flex;
}

.display-mobile {
  display: none;
}

/* Contact Buttons */

  .contact-buttons {
    display: flex;
    margin-top: 7em;
  }


ul {
  display: inline-flex;
  margin: 0;
  padding: 0;
}

ul li {
  list-style: none;
  margin: 0 70px;
  justify-items: center;
  align-items: center;
}

ul li a .fa {
  font-size: 45px;
  color: #262626;
  transition: 0.5s;
}

ul li a span {
  padding: 0;
  margin: 0;
  position: absolute;
  top: 30px;
  color: #262626;
  letter-spacing: 4px;
  transition: 0.5s;
}

ul li a {
  text-decoration: none;
  display: absolute;
  display: block;
  background: #fff;
  text-align: left;
  padding: 12px;
  transform: rotate(-30deg) skew(25deg) translate(0, 0);
  transition: 0.5s;
  box-shadow: -20px 20px 10px rgb(0 0 0 / 50%);
}

ul li a:before {
  content: "";
  position: absolute;
  top: 10px;
  left: -20px;
  height: 100%;
  width: 20px;
  background: #b1b1b1;
  transform: 0.5s;
  transform: rotate(0deg) skewY(-45deg);
}

ul li a:after {
  content: "";
  position: absolute;
  bottom: -20px;
  left: -10px;
  height: 20px;
  width: 100%;
  background: #b1b1b1;
  transform: 0.5s;
  transform: rotate(0deg) skewX(-45deg);
}

ul li a:hover {
  transform: rotate(-30deg) skew(25deg) translate(20px, -15px);
  box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
}

ul li:hover .fa {
  color: #fff;
}

ul li:hover span {
  color: #fff;
}

ul li:hover:nth-child(1) a {
  background: #68c9b5;
}
ul li:hover:nth-child(1) a:before {
  background: #58ae9d;
}
ul li:hover:nth-child(1) a:after {
  background: #00ffcb;
}

ul li:hover:nth-child(2) a {
  background: #15191f;
}
ul li:hover:nth-child(2) a:before {
  background: #08090b;
}
ul li:hover:nth-child(2) a:after {
  background: #131b27;
}

ul li:hover:nth-child(3) a {
  background: #0057b5;
}
ul li:hover:nth-child(3) a:before {
  background: #184e87;
}
ul li:hover:nth-child(3) a:after {
  background: #0b73e3;
}




.social-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #f2f2f2;
  box-shadow: 0px 0px 15px #00000027;
  padding: 15px 10px;
  border-radius: 5em;
  margin-top: 7em;
  max-width: 15em;
}

.social-button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  margin: 0 10px;
  background-color: #fff;
  box-shadow: 0px 0px 4px #00000027;
  transition: 0.3s;
}

.social-button:hover {
  background-color: #f2f2f2;
  box-shadow: 0px 0px 6px 3px #00000027;
}

.social-buttons svg {
  transition: 0.3s;
  height: 20px;
}

.facebook {
  background-color: #3b5998;
}

.facebook svg {
  fill: #f2f2f2;
}

.facebook:hover svg {
  fill: #3b5998;
}

.github {
  background-color: #333;
}

.github svg {
  width: 25px;
  height: 25px;
  fill: #f2f2f2;
}

.github:hover svg {
  fill: #333;
}

.linkedin {
  background-color: #0077b5;
}

.linkedin svg {
  fill: #f2f2f2;
}

.linkedin:hover svg {
  fill: #0077b5;
}

.instagram {
  background-color: #c13584;
}

.instagram svg {
  fill: #f2f2f2;
}

.instagram:hover svg {
  fill: #c13584;
}


/* Waves */

.header-waves {
  position: relative;
  background: linear-gradient(180deg, #1e2d44 0%, #203149 100%);
  color: white;
}

.inner-header {
  height: 85vh;
  width: 100%;
  margin: 0;
  padding: 0;
}

.waves {
  position: relative;
  width: 100%;
  height: 20vh;
  margin-bottom: -7px; /*Fix for safari gap*/
  min-height: 100px;
  max-height: 150px;
}

/* Animation */

.parallax > use {
  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
}
.parallax > use:nth-child(1) {
  animation-delay: -2s;
  animation-duration: 7s;
}
.parallax > use:nth-child(2) {
  animation-delay: -3s;
  animation-duration: 10s;
}
.parallax > use:nth-child(3) {
  animation-delay: -4s;
  animation-duration: 13s;
}
.parallax > use:nth-child(4) {
  animation-delay: -5s;
  animation-duration: 20s;
}
@keyframes move-forever {
  0% {
    transform: translate3d(-90px, 0, 0);
  }
  100% {
    transform: translate3d(85px, 0, 0);
  }
}
/*Shrinking for mobile*/
@media (max-width: 768px) {
  .waves {
    height: 40px;
    min-height: 40px;
  }
}

/* Mobile */

@media (max-width: 800px) {
  .display-mobile {
    display: block;
  }

  .quote {
    font-size: 1em;
    padding-right: 20px;
  }

  .career-content {
    padding: 40px;
  }

  #about-text {
    width: auto;
  }

  #about {
    height: auto;
  }

  #typed {
    font-size: 3em;
  }

  .background {
    height: auto !important;
  }
}

a.neon-button {
  position: relative;
  display: flex;
  justify-content: center;
  padding: 15px 30px;
  color: #3bffd7;
  text-transform: uppercase;
  letter-spacing: 4px;
  text-decoration: none;
  font-size: 24px;
  overflow: hidden;
  transition: 0.2s;
}

@media (max-width: 680px) {
  #typed {
    font-size: 2.5em;
  }
}

/* Contact Button Animation */
@media (min-width: 800px) {
  a.neon-buton:hover {
    color: white;
    background: #3bffd7;
    box-shadow: 0 0 10px #3bffd7, 0 0 40px #3bffd7, 0 0 80px #3bffd7;
    transition-delay: 1s;
  }
  a span {
    position: absolute;
    display: block;
  }
  a span:nth-child(1) {
    top: 0;
    left: -100%;
    width: 100%;
    height: 2px;
    background: linear-gradient(90deg, transparent, #3bffd7);
  }
  a:hover span:nth-child(1) {
    left: 100%;
    transition: 1s;
  }
  a span:nth-child(3) {
    bottom: 0;
    right: -100%;
    width: 100%;
    height: 2px;
    background: linear-gradient(270deg, transparent, #3bffd7);
  }
  a:hover span:nth-child(3) {
    right: 100%;
    transition: 1s;
    transition-delay: 0.5s;
  }
  a span:nth-child(2) {
    top: -100%;
    right: 0;
    width: 2px;
    height: 100%;
    background: linear-gradient(180deg, transparent, #3bffd7);
  }
  a:hover span:nth-child(2) {
    top: 100%;
    transition: 1s;
    transition-delay: 0.25s;
  }
  a span:nth-child(4) {
    bottom: -100%;
    left: 0;
    width: 2px;
    height: 100%;
    background: linear-gradient(360deg, transparent, #3bffd7);
  }
  a:hover span:nth-child(4) {
    bottom: 100%;
    transition: 1s;
    transition-delay: 0.75s;
  }
}

@media (max-width: 680px) {
  #typed {
    font-size: 2.5em;
  }
}

/* Particles */
canvas {
  display: block;
  /* vertical-align: bottom; */
}
#particles-js {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #0d1a2d;
  background-repeat: no-repeat;
  background-size: 20%;
  background-position: 50% 50%;
} /* ---- stats.js ---- */
.count-particles {
  background: #000022;
  position: absolute;
  top: 48px;
  left: 0;
  width: 80px;
  color: #13e8e9;
  font-size: 0.8em;
  text-align: left;
  text-indent: 4px;
  line-height: 14px;
  padding-bottom: 2px;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: bold;
}
.js-count-particles {
  font-size: 1.1em;
}
#stats,
.count-particles {
  -webkit-user-select: none;
  margin-top: 5px;
  margin-left: 5px;
}
#stats {
  border-radius: 3px 3px 0 0;
  overflow: hidden;
}
.count-particles {
  border-radius: 0 0 3px 3px;
}

